--- a/front-end/src/app/core/database-image-modal/database-image-modal.component.html
+++ b/front-end/src/app/core/database-image-modal/database-image-modal.component.html
@@ -1,5 +1,5 @@
 
-<label for="modal-databaseimage{{id}}" class="button-card chargingButton ">Banque d'images</label>
+<label for="modal-databaseimage{{id}}" class="btn btn-success">Banque d'images</label>
 <button type="button" class="hidden" id="modal-databaseimage{{id}}" (click)="modalService.open(imgdbmodal)"></button>
 
 
