--- a/front-end/src/app/core/quizzes/visibility/visibility-choice-modal.component.scss
+++ b/front-end/src/app/core/quizzes/visibility/visibility-choice-modal.component.scss
@@ -3,3 +3,7 @@
 @import 'src/styles/images.scss';
 @import 'src/styles/layout.scss';
 @import 'src/styles/common.scss';
+
+.left-button{
+   font-size: 1.5vw;
+}
