--- a/front-end/src/app/core/themes/theme-form/theme-form.component.scss
+++ b/front-end/src/app/core/themes/theme-form/theme-form.component.scss
@@ -3,6 +3,8 @@
 @import '../../../../styles/images.scss';
 @import '../../../../styles/common.scss';
 
-.button-bottom{
-    text-align: center;
+.add-theme{
+    font-size: 12px;
+    margin-left: 1em;
+
 }
