--- a/front-end/src/app/game/recap/recap.component.scss
+++ b/front-end/src/app/game/recap/recap.component.scss
@@ -8,7 +8,7 @@
     left: 5%;
     right: 5%;
     margin-top: auto;
-    background-color: rgb(255, 206, 206);  
+    //background-color: rgb(255, 206, 206);  
     height: 35%;
     display: flex;
     justify-content: center; /*horizontal centering*/
