--- a/front-end/src/app/game/right-answer/right-answer.component.scss
+++ b/front-end/src/app/game/right-answer/right-answer.component.scss
@@ -3,7 +3,7 @@
 @import '../../../styles/layout.scss';
 
 .box {
-    background-color: rgb(250, 153, 153);
+    //background-color: rgb(250, 153, 153);
     display: flex;
     justify-content: center; /*horizontal centering*/
     align-items:center;     /*vertical centering*/
@@ -19,7 +19,7 @@
     right: 5%;
     height: 45%; 
     width: 90%; 
-    background-color: #563d7c; 
+    //background-color: #563d7c; 
     text-align: center;
     display: flex;
     justify-content: center; /*horizontal centering*/
@@ -35,7 +35,7 @@
     right: 5%;
     height: 65%; 
     width: 90%; 
-    background-color: #563d7c; 
+    //background-color: #563d7c; 
     text-align: center;
     display: flex;
     justify-content: center; /*horizontal centering*/
