--- a/front-end/src/app/game/selected-vs-right-answer/selected-vs-right-answer.component.scss
+++ b/front-end/src/app/game/selected-vs-right-answer/selected-vs-right-answer.component.scss
@@ -11,7 +11,7 @@
     right: 5%;
     height: 63%; 
     width: 90%; 
-    background-color: #563d7c; 
+    //background-color: #563d7c; 
     text-align: center;
     display: flex;
     justify-content: center; /*horizontal centering*/
@@ -29,7 +29,7 @@
     right: 5%;
     height: 63%; 
     width: 90%; 
-    background-color: #563d7c; 
+    //background-color: #563d7c; 
     text-align: center;
     display: flex;
     justify-content: center; /*horizontal centering*/
@@ -53,7 +53,7 @@
 
 .givenAnswer {
     text-align: center;
-    background-color: palevioletred;
+    //background-color: palevioletred;
     width: 100%;
 }
 
@@ -64,7 +64,7 @@
 
 .rightAnswer {
     text-align: center;
-    background-color: palevioletred;
+    //background-color: palevioletred;
     width: 100%;
 }
 
