--- a/front-end/src/app/core/quizzes/quiz-view/quiz-view.component.html
+++ b/front-end/src/app/core/quizzes/quiz-view/quiz-view.component.html
@@ -9,31 +9,20 @@
   <i class="fa fa-home" aria-hidden="true"></i>
 </div>
 
-<div *ngIf ="quiz" class="img-edit-block">
-  <button class="edit-button" id = "editQuizName" (click)="modalService.open(quizEditModal)">Modifier le quiz</button>
+<div *ngIf ="quiz && image.url" class="img-edit-block">
+  <app-quiz-form-modal [quiz] = "quiz" [image] = "image" ></app-quiz-form-modal>
 </div>
 <div *ngIf = "quiz" ><app-visibility-choice-modal [quiz] = "quiz" (hidden) = "switchHidden($event)"></app-visibility-choice-modal></div>
 
-<div *ngIf ="quiz">
+<div *ngIf ="quiz && quiz.questions">
   <app-question-list [quiz]="quiz"></app-question-list>
 </div>
 
-<ng-template #quizEditModal let-modal>
-  <div class="modal-header">
-    <h4 class="modal-title" id="modal-basic-title">Modifier les informations du quiz :</h4>
-    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
-      <span aria-hidden="true">&times;</span>
-    </button>
-  </div>
-  <div class="modal-body">
-      <app-quiz-form-modal [quiz] = "quiz" [image] = "image" (quitForm) = "modal.close()"></app-quiz-form-modal>
-  </div>
-</ng-template>
 
 <ng-template #quizInvalid let-modal>
   <div class="modal-header">
     <h4 class="modal-title" id="modal-basic-title">Quiz incomplet</h4>
-    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click');goBack()">
       <span aria-hidden="true">&times;</span>
     </button>
   </div>
