--- a/front-end/src/app/core/quizzes/visibility/associate-quiz-modal.component.html
+++ b/front-end/src/app/core/quizzes/visibility/associate-quiz-modal.component.html
@@ -19,8 +19,8 @@
           </div>
         </form>
         <div class="modal-footer">
-            <button type="button" class="btn btn-outline-dark" (click)="submit();modal.close()">Ajouter</button>
-            <button type="button" class="btn btn-outline-dark" (click)="reset();modal.close()">Annuler</button>
+            <button type="button" class="btn btn-secondary" (click)="reset();modal.close()">Annuler</button>
+            <button type="button" class="btn btn-primary" (click)="submit();modal.close()">Ajouter</button>
           </div>
     </div>
   </ng-template>
