--- a/front-end/src/app/core/themes/theme-form/theme-form.component.html
+++ b/front-end/src/app/core/themes/theme-form/theme-form.component.html
@@ -1,23 +1,24 @@
-<form [formGroup]="themeForm">
-  <label>
-      Nouveau thème :
-      <input type="text" [formControlName]="'name'">
-  </label>
-  <br>
-  <div class = "button-bottom" >
-      <button class="button-card" type="submit" (click) = "saveTheme()">Ok</button>
-      <button class="button-card" (click) = "cancel()">Annuler</button>
+<button class = "new-button add-theme" (click)="modalService.open(themeFormModal)"><i class="fas fa-plus-circle"></i> Nouveau Thème</button>
+
+
+<ng-template #themeFormModal let-modal>
+  <div class="modal-header">
+    <h4 class="modal-title" id="modal-basic-title">Ajouter un thème</h4>
+    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+      <span aria-hidden="true">&times;</span>
+    </button>
   </div>
-</form>
-
-
-<!--<ng-template #thememodal let-modal>
-    <div class="modal-header">
-      <h4 class="modal-title" id="modal-basic-title">Ajouter un thème</h4>
-      <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
-        <span aria-hidden="true">&times;</span>
-      </button>
-    </div>
-    <div class="modal-body">
-    </div>
-  </ng-template>-->
+  <div class="modal-body">
+    <form [formGroup]="themeForm">
+      <label>
+          Nouveau thème :
+          <input type="text" [formControlName]="'name'">
+      </label>
+      <br>
+    </form>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-secondary" (click) = "cancel();modal.close()">Annuler</button>
+    <button type="button" class="btn btn-primary" (click)= "saveTheme();modal.close()">Valider</button>
+  </div>
+</ng-template>
