--- a/front-end/src/app/game/answer-list-widget/answer-list-widget.component.scss
+++ b/front-end/src/app/game/answer-list-widget/answer-list-widget.component.scss
@@ -10,7 +10,7 @@
     margin-right: 5%;
     height: 65%; 
     width: 90%; 
-    background-color: #563d7c; 
+    //background-color: #563d7c; 
     text-align: center;
     display: grid; 
     grid-template-columns: repeat( auto-fit, minmax(49%, 1fr) );
@@ -23,7 +23,7 @@
     bottom: 5%;
     left: 20%;
     right: 20%;
-    background-color: rgb(38, 139, 255);//default
+    //background-color: rgb(38, 139, 255);//default
     border-radius: 10rem;
     height: 10%;
     width: 40%;//16rem;
